# cli-social

./: .gitignore  Dockerfile  Node.md  README.md  pyproject.toml  registry.signed.json  requirements.txt
.github/workflows/: docker.yml
cli_social/: identity.py  storage.py
cli_social/cmds/: cli.py
cli_social/p2p/: __init__.py  bs.txt  daemon.py  dht.py  registry.py  relay.py  transport.py  utils.py
cli_social/tui/: __init__.py  app.py
